[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "pytest-cov>=6.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]


[tool.uv.workspace]
members = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
